unpackaged/main/default/objects/FPC_SIC__c/FPC_SIC__c.object-meta.xml
<CustomObject>
    <description>SIC / NAICS Table</description>
    <label>SIC Code</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>SIC Code ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SIC Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>