unpackaged/main/default/objects/FPC_SIC__c/fields/Broker_Amt_Cap_Diamond__c.field-meta.xml
<CustomField>
    <fullName>Broker_Amt_Cap_Diamond__c</fullName>
    <description>This field will indicate the approval amount cap for broker deals approved by the diamond tier.</description>
    <label>Broker Amt Cap Diamond</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>