unpackaged/main/default/objects/FPC_SIC__c/fields/Broker_Amt_Cap_Gold__c.field-meta.xml
<CustomField>
    <fullName>Broker_Amt_Cap_Gold__c</fullName>
    <description>This field will indicate the approval amount cap for broker deals approved by the gold term.</description>
    <inlineHelpText>This field will indicate the approval amount cap for broker deals approved by the gold term.</inlineHelpText>
    <label>Broker Amt Cap Gold</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>