unpackaged/main/default/objects/FPC_SIC__c/fields/Broker_Term_Cap_Gold__c.field-meta.xml
<CustomField>
    <fullName>Broker_Term_Cap_Gold__c</fullName>
    <description>This field will indicate the term cap for broker deals approved by the gold term.</description>
    <inlineHelpText>This field will indicate the term cap for broker deals approved by the gold term.</inlineHelpText>
    <label>Broker Term Cap Gold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>