unpackaged/main/default/objects/FPC_SIC__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approvable</fullName>
            </value>
            <value>
                <fullName>Restricted</fullName>
            </value>
            <value>
                <fullName>Auto Decline</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>