unpackaged/main/default/objects/FPC_SIC__c/fields/Expanded_SIC__c.field-meta.xml
<CustomField>
    <fullName>Expanded_SIC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Expanded SIC</label>
    <type>Checkbox</type>
</CustomField>