unpackaged/main/default/objects/FPC_SIC__c/fields/NF_Amt_Cap_Diamond__c.field-meta.xml
<CustomField>
    <fullName>NF_Amt_Cap_Diamond__c</fullName>
    <description>This field will indicate the approval amount cap for broker deals approved for the diamond tier.</description>
    <inlineHelpText>This field will indicate the approval amount cap for broker deals approved for the diamond tier.</inlineHelpText>
    <label>NF Amt Cap Diamond</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>