unpackaged/main/default/objects/FPC_SIC__c/fields/NF_Term_Cap_Gold__c.field-meta.xml
<CustomField>
    <fullName>NF_Term_Cap_Gold__c</fullName>
    <description>This field will indicate the approval term cap for broker deals approved for the gold tier.</description>
    <inlineHelpText>This field will indicate the approval term cap for broker deals approved for the gold tier.</inlineHelpText>
    <label>NF Term Cap Gold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>