unpackaged/main/default/objects/FPC_SIC__c/fields/NF_Term_Cap_Platinum__c.field-meta.xml
<CustomField>
    <fullName>NF_Term_Cap_Platinum__c</fullName>
    <description>This field will indicate the approval term cap for broker deals approved for the platinum tier.</description>
    <inlineHelpText>This field will indicate the approval term cap for broker deals approved for the platinum tier.</inlineHelpText>
    <label>NF Term Cap Platinum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>