unpackaged/main/default/objects/FPC_SIC__c/fields/SIC_4D__c.field-meta.xml
<CustomField>
    <fullName>SIC_4D__c</fullName>
    <label>SIC 4D</label>
    <length>4</length>
    <type>Text</type>
</CustomField>