unpackaged/main/default/objects/FPC_SIC__c/fields/SIC_Capped__c.field-meta.xml
<CustomField>
    <fullName>SIC_Capped__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will indicate if the SIC Code/Industry has a capped term or amount.</description>
    <inlineHelpText>This field will indicate if the SIC Code/Industry has a capped term or amount.</inlineHelpText>
    <label>SIC Capped</label>
    <type>Checkbox</type>
</CustomField>