unpackaged/main/default/objects/FPC_SIC__c/fields/SIC_Code__c.field-meta.xml
<CustomField>
    <fullName>SIC_Code__c</fullName>
    <description>The SIC Code</description>
    <inlineHelpText>The SIC Code</inlineHelpText>
    <label>SIC Code</label>
    <length>16</length>
    <type>Text</type>
</CustomField>