unpackaged/main/default/objects/FPC_SIC__c/fields/SIC_Name__c.field-meta.xml
<CustomField>
    <fullName>SIC_Name__c</fullName>
    <description>The Description of this SIC Code</description>
    <inlineHelpText>The Description of this SIC Code</inlineHelpText>
    <label>SIC Name</label>
    <length>64</length>
    <type>Text</type>
</CustomField>